--- a/src/MavenProj/pom.xml
+++ b/src/MavenProj/pom.xml
@@ -10,6 +10,10 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>practice_03_01</module>
+        <module>practice_14.1.1</module>
+        <module>practice_14.1.2</module>
+        <module>practice_14.1.3</module>
+        <module>practice_14.1.4</module>
     </modules>
 
 
